--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation "com.jakewharton.timber:timber:5.0.1"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     //Hilt
     implementation "com.google.dagger:hilt-android:2.46"
