--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,18 @@ plugins {
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id "org.jlleitschuh.gradle.ktlint" version '11.3.2' apply false
+}
+subprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+
+    repositories {
+        // Required to download KtLint
+        mavenCentral()
+    }
+
+    // Optionally configure plugin
+    ktlint {
+        debug = true
+    }
 }
