Add dummy view for main screens
-create simple ui components
-add local spacing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,6 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
-            }
-        }
     }
 
     buildTypes {
@@ -74,13 +69,16 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.compose.material:material:1.4.3"
     implementation "com.jakewharton.timber:timber:5.0.1"
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
     //Hilt
     implementation "com.google.dagger:hilt-android:2.46"
     implementation 'androidx.hilt:hilt-work:1.0.0'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
     kapt "com.google.dagger:hilt-compiler:2.46"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     //Tests
     testImplementation 'junit:junit:4.13.2'
