--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -59,12 +64,12 @@ kapt {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
@@ -74,11 +79,16 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
     //Hilt
-    implementation "com.google.dagger:hilt-android:2.46"
+    implementation "com.google.dagger:hilt-android:$dagger_hilt_version"
     implementation 'androidx.hilt:hilt-work:1.0.0'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
-    kapt "com.google.dagger:hilt-compiler:2.46"
+    kapt "com.google.dagger:hilt-compiler:$dagger_hilt_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    //Room
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     //Tests
     testImplementation 'junit:junit:4.13.2'
@@ -88,4 +98,5 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    androidTestImplementation "androidx.room:room-testing:$room_version"
 }
