--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        room_version = '2.5.1'
+        dagger_hilt_version = '2.45'
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.android.tools.build:gradle:8.0.2'
+        classpath 'com.google.firebase:perf-plugin:1.4.2'
+    }
+}
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
