--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@
 buildscript {
     ext {
         room_version = '2.5.1'
-        dagger_hilt_version = '2.45'
+        dagger_version = '2.46.1'
+        hilt_version = '1.0.0'
+        compose_version = '1.4.3'
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
