--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,10 @@ dependencies {
     implementation "com.jakewharton.timber:timber:5.0.1"
     implementation "androidx.navigation:navigation-compose:2.6.0"
 
+    //Accompanist-permissions
+    implementation "com.google.accompanist:accompanist-permissions:0.28.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.28.0"
+
     //Hilt
     implementation "com.google.dagger:hilt-android:$dagger_version"
     implementation "androidx.hilt:hilt-work:$hilt_version"
