--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-graphics:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.0'
+    implementation 'androidx.compose.material3:material3:1.1.1'
     implementation "androidx.compose.material:material:$compose_version"
     implementation "com.jakewharton.timber:timber:5.0.1"
     implementation "androidx.navigation:navigation-compose:2.6.0"
@@ -93,6 +93,9 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    //Shortcut badger
+    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
 
     //Tests
     testImplementation 'junit:junit:4.13.2'
