--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.devtools.ksp'
 }
 
 android {
     namespace 'com.hermanowicz.wirelesswhisper'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.hermanowicz.wirelesswhisper"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName '0.1'
 
@@ -40,17 +40,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.5.3'
     }
     packagingOptions {
         resources {
@@ -59,24 +59,20 @@ android {
     }
 }
 
-kapt {
-    correctErrorTypes true
-}
-
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.work:work-runtime-ktx:2.8.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-graphics:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.1'
+    implementation 'androidx.compose.material3:material3:1.1.2'
     implementation "androidx.compose.material:material:$compose_version"
     implementation "com.jakewharton.timber:timber:5.0.1"
-    implementation "androidx.navigation:navigation-compose:2.6.0"
+    implementation "androidx.navigation:navigation-compose:2.7.3"
 
     //Accompanist-permissions
     implementation "com.google.accompanist:accompanist-permissions:0.28.0"
@@ -85,14 +81,14 @@ dependencies {
     //Hilt
     implementation "com.google.dagger:hilt-android:$dagger_version"
     implementation "androidx.hilt:hilt-work:$hilt_version"
-    kapt "androidx.hilt:hilt-compiler:$hilt_version"
-    kapt "com.google.dagger:hilt-compiler:$dagger_version"
+    ksp "androidx.hilt:hilt-compiler:$hilt_version"
+    ksp "com.google.dagger:hilt-compiler:$dagger_version"
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_version"
 
     //Room
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
 
     //Shortcut badger
     implementation "me.leolin:ShortcutBadger:1.1.22@aar"
