--- a/build.gradle
+++ b/build.gradle
@@ -2,22 +2,24 @@
 buildscript {
     ext {
         room_version = '2.5.2'
-        dagger_version = '2.46.1'
+        dagger_version = '2.48'
         hilt_version = '1.0.0'
-        compose_version = '1.4.3'
+        compose_version = '1.5.1'
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'com.android.tools.build:gradle:8.0.2'
+        classpath 'com.google.gms:google-services:4.4.0'
+        classpath 'com.android.tools.build:gradle:8.1.2'
         classpath 'com.google.firebase:perf-plugin:1.4.2'
     }
 }
 plugins {
-    id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
-    id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'com.android.application' version '8.1.2' apply false
+    id 'com.android.library' version '8.1.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.48' apply false
     id "org.jlleitschuh.gradle.ktlint" version '11.3.2' apply false
+    id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false
+
 }
 subprojects {
     apply plugin: "org.jlleitschuh.gradle.ktlint"
